--- a/crm/templates/base.html
+++ b/crm/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TECH-O</a>
+          <a class="navbar-brand" href="#"><img src="{%static 'images/logo.jpg'%}" alt="" style="width: 100px; height: 50px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
